[package]
name = "lakeshore336"
version = "0.1.0"
edition = "2024"

[dependencies]
instrumentrs2 = { git = "https://github.com/trappitsch/instrumentRs2", rev = "ee03208f" }
measurements = { version = "0.11.1", features = ["std"] }

serde = { version = "1", features = ["derive"], optional = true }
serialport = { version = "4.9.0", optional = true }

[dev-dependencies]
instrumentrs2 = { git = "https://github.com/trappitsch/instrumentRs2", rev = "ee03208f", features = [
  "mock-interface",
] }

[features]
serde = ["dep:serde", "measurements/serde"]
serialport = ["dep:serialport"]

[[example]]
name = "cryostorage"
required-features = ["serialport"]

[patch.crates-io]
measurements = { git = 'https://github.com/rust-embedded-community/rust-measurements.git' }
